tests/rosetta/out/Kotlin/100-prisoners.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/100-prisoners.kt:55:25: error: expecting property name or receiver type
                    val this = drawers[prev]
                        ^
/tmp/100-prisoners.kt:21:17: error: unresolved reference: now
        val j = now() % (i + 1)
                ^
/tmp/100-prisoners.kt:43:23: error: type inference failed. Expected type mismatch: inferred type is List<Int> but MutableList<Int> was expected
            drawers = drawers + i
                      ^
/tmp/100-prisoners.kt:56:25: error: 'this' is not defined in this context
                    if (this == p) {
                        ^
/tmp/100-prisoners.kt:60:28: error: 'this' is not defined in this context
                    prev = this
                           ^
/tmp/100-prisoners.kt:68:30: error: type inference failed. Expected type mismatch: inferred type is List<Boolean> but MutableList<Boolean> was expected
                    opened = opened + false
                             ^
/tmp/100-prisoners.kt:73:29: error: unresolved reference: now
                    var n = now() % 100
                            ^
/tmp/100-prisoners.kt:75:29: error: unresolved reference: now
                        n = now() % 100
                            ^
/tmp/100-prisoners.kt:103:1: error: conflicting overloads: public fun main(): Unit defined in root package in file 100-prisoners.kt, public fun main(): Unit defined in root package in file 100-prisoners.kt
fun main(): Unit {
^
/tmp/100-prisoners.kt:113:1: error: conflicting overloads: public fun main(): Unit defined in root package in file 100-prisoners.kt, public fun main(): Unit defined in root package in file 100-prisoners.kt
fun main() {
^
/tmp/100-prisoners.kt:114:5: error: overload resolution ambiguity: 
public fun main(): Unit defined in root package in file 100-prisoners.kt
public fun main(): Unit defined in root package in file 100-prisoners.kt
    main()
    ^
